[gd_scene load_steps=10 format=3 uid="uid://o4qvos0dd3me"]

[ext_resource type="Script" path="res://actors/rad_scan.gd" id="1_8wxcr"]
[ext_resource type="Texture2D" uid="uid://bdsw2fjn6gjgh" path="res://sprites/scan.png" id="1_lnqsk"]

[sub_resource type="Curve" id="Curve_jjtwf"]
max_value = 80.0
_data = [Vector2(0, 0), 0.0, 100.0, 0, 1, Vector2(1, 100), 100.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_iu7a7"]
curve = SubResource("Curve_jjtwf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4t6yv"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_iu7a7")
color = Color(1, 0, 0, 0.25098)

[sub_resource type="Curve" id="Curve_lebf8"]
max_value = 80.0
_data = [Vector2(0, 0), 0.0, 100.0, 0, 1, Vector2(1, 100), 100.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ytkeq"]
curve = SubResource("Curve_lebf8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i3qlh"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_ytkeq")
color = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0mko"]
size = Vector2(1280, 720)

[node name="RadiationScan" type="Node2D"]
script = ExtResource("1_8wxcr")
warmup_time = 3.0

[node name="Indicator" type="GPUParticles2D" parent="."]
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_4t6yv")
texture = ExtResource("1_lnqsk")
lifetime = 5.0
one_shot = true
visibility_rect = Rect2(-250, -250, 500, 500)

[node name="ActiveScan" type="GPUParticles2D" parent="."]
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_i3qlh")
texture = ExtResource("1_lnqsk")
one_shot = true
visibility_rect = Rect2(-250, -250, 500, 500)

[node name="WarmupTimer" type="Timer" parent="."]
one_shot = true

[node name="ScanCast" type="ShapeCast2D" parent="."]
visible = false
enabled = false
shape = SubResource("RectangleShape2D_i0mko")
target_position = Vector2(0, 0)

[connection signal="timeout" from="WarmupTimer" to="." method="_on_warmup_timer_timeout"]
